--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,41 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+
+
+{% if user.is_authenticated %}
+
+ИНФА НА ДОМАШНЕЙ СТРАНИЦЕ
+
+
+
+
+
+{% else %}
+
+<div class="col-md-6 offset-md-3">
+<h1>Добро пожаловать.</h1>
+<h3>Войдите в учетную запись или зарегистрируйтесь.</h3>
+<br/>
+
+<form method="POST" action="{% url 'index' %}">
+	{% csrf_token %}
+
+  <div class="mb-3">
+    <input type="text" class="form-control" name="username", placeholder="Имя пользователя" required>
+
+  </div><br/>
+  <div class="mb-3">
+    <input type="password" class="form-control" name="password", placeholder="Пароль" required>
+  </div>
+  <br/>
+  <button type="submit" class="btn btn-secondary">Войти</button>
+
+</form>
+
+
+
+{% endif %}
+
 {% endblock %}
