--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -76,7 +76,7 @@
         </li>
         {% else %}
         <li>
-          <a class="nav-link disabled text-light" aria-disabled="true">Карта</a>
+          <a class="nav-link active text-white" aria-current="page" href="#">Карта</a>
         </li>
         {% endif %}
         {% if not user.is_superuser %}
