--- a/templates/index.html
+++ b/templates/index.html
@@ -9,16 +9,19 @@
       <li>Навигация и скелет готовы.</li>
       <li>Личный кабинет готов.</li>
       <li>Регистрация работает.</li>
-      <li>Суперюзеры видят админку, остальные — нет.</li>
+      <li>Супер-юзеры видят админку, остальные — нет.</li>
 
-      <li>Суперюзеры не видят поддержку, они и есть — поддержка.</li>
-      <li>Создан подкласс премиум-юзера и роль модератора, модеры видят черные списки.</li>
+
+      <li>Супер-юзеры не видят поддержку, они и есть — поддержка.</li>
+      <li>Создан подкласс премиум-юзера и роль модератора, модеры видят черные списки, премиумы видят карту.</li>
       <li>Все вышеперечисленные типы юзеров могут видеть карту.</li>
       <li>Все присваивается через <code>localhost/admin</code>.</li>
     </ul>
     <h3>Минусы:</h3>
     <ul>
+      <li>Надо обсудить механику магазина.</li>
       <li>Карты нет.</li>
+      <li>Поиск на главной пока не работает. Его видят только супер-юзеры.</li>
       <li>Пока неясно, какими параметрами еще нужно будет нагрузить юзера.</li>
       <li>Пароль пока не меняется из личного кабинета. (Через <code>localhost/admin</code> супер-юзер может изменить вручную любую учетную запись.)</li>
       <li>Для аватаров не выделена директория. Нужно придумать динамическое значение.</li>
@@ -30,6 +33,20 @@
       <li>Дать платформе понять по имени персонажа на сервере всю необходимую информацию через RCon.</li>
     </ul>
     <h3>2. Получить контроль над списками.</h3>
+      <li><a href="#">Спавн предметов</a></li>
+      <code>types/types_dzn</code>
+      <li><a href="#">Спавн зомби</a></li>
+      <li><a href="#">Спавн игроков</a></li>
+      <li><a href="#">Спавн животных</a></li>
+      <li><a href="#">Списки предметов</a></li>
+      <li><a href="#">Теги и Категории</a></li>
+      <li><a href="#">Свойства оружия</a></li>
+      <li><a href="#">Содержимое контейнеров</a></li>
+      <li><a href="#">Свойства предметов</a></li>
+      <li><a href="#">Экономика и цены</a></li>
+      <li><a href="#">Пресеты для лутбоксов</a></li>
+      <li><a href="#">Черные списки</a></li>
+
     <ul>
       <li>В приоритете <code>types/types_dzn</code>.</li>
     </ul>
